--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,11 @@
         left: 0;
         width: 100%;
         height: 100%;
+        pointer-events: all;
     }
 
     #background-layer {
-        z-index: -1;
+        z-index: -10;
         /* Rendered at the bottom */
         background: #ffffff;
         /* Example background color */
@@ -28,17 +29,12 @@
     #threejs-layer {
         z-index: 0;
         /* Three.js canvas in the middle */
+        pointer-events: none;
     }
 
     #littlejs-2d-layer {
-        z-index: 1;
+        z-index: 1000  ;
         /* LittleJS or 2D overlay on top */
         pointer-events: all;
     }
 
-    #littlejs-ui-layer {
-        z-index: 2;
-        /* LittleJS or 2D overlay on top */
-        pointer-events: all;
-        /* Allow clicks to pass through */
-    }
